--- a/styles.css
+++ b/styles.css
@@ -218,11 +218,13 @@ body {
   background-image: url("https://vulpecula.neocities.org/images/paper2.jpg");
   padding: 2rem;
   border-radius: 15px;
-  max-width: 500px;
   border-style: solid;
   border-width: 2px;
   border-color: #3d2b1f;
-  width: 90%;
+  height: auto;
+  width: 73%;
+  max-width: 760px;
+  max-height: 520px;
   text-align: center;
   opacity: 1;
   transform: scale(0.3) rotate(0turn);
@@ -299,6 +301,8 @@ source {
 }
 
 .video-actual {
-  height: 20vh;
-  width: 32vh;
+  height: 30vw;
+  width: 50vw;
+  max-width: 600px;
+  max-height: 400px;
 }
